<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.algart</groupId>
    <artifactId>algart-tiff</artifactId>
    <version>1.5.1</version>

    <name>AlgART TIFF support</name>
    <description>Support of TIFF files: reading, writing, editing, etc.</description>
    <url>https://algart.net/java/AlgART-TIFF/</url>

    <licenses>
        <license>
            <name>The MIT License (MIT)</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Daniel Alievsky</name>
            <email>daniel@iskrael.org</email>
            <organization>AlgART laboratory</organization>
            <organizationUrl>https://algart.net</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/Daniel-Alievsky/algart-tiff.git</connection>
        <developerConnection>scm:git:https://github.com/Daniel-Alievsky/algart-tiff.git</developerConnection>
        <url>https://github.com/Daniel-Alievsky/algart-tiff.git</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>net.algart</groupId>
            <artifactId>algart</artifactId>
            <version>1.5.1</version>
        </dependency>

        <dependency>
            <groupId>com.github.jai-imageio</groupId>
            <artifactId>jai-imageio-jpeg2000</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.scijava</groupId>
            <artifactId>scijava-common</artifactId>
            <version>2.99.2</version>
        </dependency>
        <!-- Note: the following dependencies MUST NOT affect to correct reading/writing JPEG -->
        <!-- You may uncomment them for testing this fact! -->
        <!--        <dependency>-->
        <!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
        <!--            <artifactId>imageio-jpeg</artifactId>-->
        <!--            <version>3.9.4</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
        <!--            <artifactId>imageio-tiff</artifactId>-->
        <!--            <version>3.9.4</version>-->
        <!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
<!--            Uncomment the following to use -Xlint -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-compiler-plugin</artifactId>-->
<!--                <version>3.11.0</version>-->
<!--                <configuration>-->
<!--                    <source>21</source>-->
<!--                    <target>21</target>-->
<!--                    <compilerArgs>-->
<!--                        <arg>-Xlint:unchecked</arg>-->
<!--                    </compilerArgs>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                            <!-- necessary to make JAR also for test classes -->
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptors>
                        <descriptor>assembly-with-dependencies.xml</descriptor>
                    </descriptors>
                    <finalName>algart-tiff</finalName>
                    <archive>
                        <manifest>
                            <mainClass>net.algart.matrices.tiff.app.TiffInfoViewer</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>zip-tiffinfo</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo level="info">Creating distribution ZIP</echo>
                                <mkdir dir="${project.build.directory}/build/tiff-info"/>
                                <copy file="${project.build.directory}/algart-tiff-with-dependencies.jar"
                                      tofile="${project.build.directory}/build/tiff-info/TiffInfoViewer.jar"/>
                                <copy todir="${project.build.directory}/build/tiff-info">
                                    <fileset dir="${project.basedir}/build/tiff-info"/>
                                </copy>
                                <zip destfile="${project.build.directory}/build/tiff-info-${project.version}.zip">
                                    <zipfileset dir="${project.build.directory}/build/tiff-info" prefix="tiff-info"/>
                                </zip>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <!-- Signing JARs by GnuPG (requirement of Maven Central) -->
            <!-- Please ACTIVATE this profile before deployment! -->
            <id>release-maven-central</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.11.2</version>
                        <configuration>
                            <release>${maven.compiler.release}</release>
                            <encoding>UTF-8</encoding>
                            <doclint>none</doclint>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.8.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <repository>
                    <id>central</id>
                    <name>Central Publishing Portal Releases</name>
                    <url>https://central.sonatype.com/api/v1/publisher/upload</url>
                </repository>
                <snapshotRepository>
                    <id>central</id>
                    <name>Central Publishing Portal Snapshots</name>
                    <url>https://central.sonatype.com/api/v1/publisher/upload</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>
    </profiles>

<!-- Repository of SCIFIO was necessary in old versions of scijava-common -->
<!--    <repositories>-->
<!--        <repository>-->
<!--            <id>scijava.public</id>-->
<!--            <url>https://maven.scijava.org/content/groups/public</url>-->
<!--        </repository>-->
<!--    </repositories>-->
</project>